--- a/Otus.Task1/Otus.Task1.csproj
+++ b/Otus.Task1/Otus.Task1.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ProtoBuf-net" Version="3.0.101" />
+  </ItemGroup>
+
 </Project>
